welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:10: error: not found: value de1
    de1bis = 1 ;                                           return de1 + die2}
                                                                  ^